apply plugin: 'java'
sourceCompatibility = 17
targetCompatibility = 17
dependencies {
    testCompile 'junit:junit:4.11'
}
tasks.withType(JavaCompile) {
    options.compilerArgs += ['--enable-preview']
    options.release = 17
}
